--- a/package.json
+++ b/package.json
@@ -25,9 +25,14 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/sequelize": "^8.0.0",
+    "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
+    "rxjs": "^7.4.0",
+    "sequelize": "^6.12.0-beta.1",
+    "sequelize-typescript": "^2.1.1",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
@@ -36,6 +41,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
+    "@types/sequelize": "^4.28.10",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
